@@ -1,7 +1,4 @@
-SUBDIRS = m4 src
+SUBDIRS = data m4 src
 
-EXTRA_DIST = TODO data
-
-dist-hook:
-	rm -rf `find $(distdir)/data -name CVS`
+EXTRA_DIST = TODO
 
