@@ -1,12 +1,18 @@
-### A simplistic Edje Makefile 
+SUBDIRS = fonts images
 
-all: eplayer.edc
-	 edje_cc -v -id images eplayer.edc eplayer.eet
+EDCS = eplayer.edc
+EETS = $(EDCS:%.edc=%.eet)
 
+CLEANFILES = $(EETS)
+EXTRA_DIST = $(EDCS) README
 
-clean: eplayer.eet
-	rm -f eplayer.eet core
+themedir = $(pkgdatadir)/themes
+theme_DATA = $(EETS)
 
+all: $(EDCS)
+
+.edc.eet:
+	edje_cc -v -id images $< $@
 
 preview: eplayer.eet
 	edje eplayer.eet eplayer
