@@ -1,0 +1,6 @@
+FONTS = Vera.ttf micro.ttf redensek.ttf
+
+fontsdir = $(pkgdatadir)/themes/fonts
+fonts_DATA = $(FONTS)
+
+EXTRA_DIST = $(FONTS)
