@@ -1,0 +1,15 @@
+IMAGES = background-dark-green.png background-green.png \
+	border-scale.png button-3stage-fulldown.png \
+	button-3stage-selected.png button-3stage-unselected.png \
+	button-full-blinking.png button-full-clicked.png \
+	button-full-normal.png button-full-unblinking.png \
+	controls-back.png eplayer-interface-2b.png lcd_area.png \
+	set-button-normal.png small-text-button.png \
+	tracktor-sample-alive.png tracktor-sample-dead.png \
+	vol-display.png vol-label.png vol-minus-clicked.png \
+	vol-minus.png vol-plus-clicked.png vol-plus.png
+
+imagedir = $(pkgdatadir)/themes/images
+image_DATA = $(IMAGES)
+
+EXTRA_DIST = $(IMAGES)
