@@ -1,12 +1,8 @@
-## ePlayer Makefile.am
-## gcc -g -lao -lvorbis -lvorbisfile -lecore -lecore_evas e_player.c -o e_player
-
-INCLUDES = -I$(top_srcdir) -I$(includedir) \
+AM_CFLAGS = @AO_CFLAGS@ \
 	@ECORE_CFLAGS@ @EVAS_CFLAGS@ @EDJE_CFLAGS@ @ESMART_CFLAGS@
 
 bin_PROGRAMS = eplayer
 
-### I think e_player_HEADER is more correct but not doc'ed.
 eplayer_SOURCES = eplayer.c eplayer.h \
 	interface.c interface.h \
 	callbacks.c callbacks.h \
@@ -14,5 +10,5 @@ eplayer_SOURCES = eplayer.c eplayer.h \
 	playlist.c playlist.h \
 	mixer.c mixer.h
 
-eplayer_LDADD = -lao -lvorbis -lvorbisfile \
+eplayer_LDADD = -lvorbis -lvorbisfile @AO_LIBS@ \
 	@ECORE_LIBS@ @EVAS_LIBS@ @EDJE_LIBS@ @ESMART_LIBS@
